--- a/Prayers/Prayers/Views/PrayerView.xaml
+++ b/Prayers/Prayers/Views/PrayerView.xaml
@@ -2,46 +2,55 @@
 <ContentPage
     x:Class="Prayers.Views.PrayerView"
     xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:converters="clr-namespace:Prayers.Converters"
+    xmlns:magic="clr-namespace:MagicGradients;assembly=MagicGradients"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:StringToColorConverter x:Key="stringToColorConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="20" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="20" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50" />
-                </Grid.RowDefinitions>
-                <Button
+        <Grid>
+            <magic:GradientView GradientSource="{Binding DefaultStyle.DefaultMgPageBgSource}" VerticalOptions="FillAndExpand" />
+            <StackLayout>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="20" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50" />
+                    </Grid.RowDefinitions>
+                    <Button
                     Grid.Row="0"
                     Grid.Column="1"
                     Command="{Binding btnGoPreviousCommand}"
                     IsEnabled="{Binding CanGoPrevious}"
                     Text="Previous" />
-                <Button
+                    <Button
                     Grid.Row="0"
                     Grid.Column="2"
                     Command="{Binding btnGoNextCommand}"
                     IsEnabled="{Binding CanGoNext}"
                     Text="Next" />
-            </Grid>
-            <StackLayout>
-                <ScrollView>
-                    <StackLayout x:Name="contentStack">
-                        <Label
+                </Grid>
+                <StackLayout>
+                    <ScrollView>
+                        <StackLayout x:Name="contentStack">
+                            <Label
                             FontSize="Header"
                             HorizontalOptions="CenterAndExpand"
                             Text="{Binding PageId}"
                             VerticalOptions="CenterAndExpand" />
 
-                    </StackLayout>
-                </ScrollView>
+                        </StackLayout>
+                    </ScrollView>
 
+                </StackLayout>
             </StackLayout>
-
-        </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
