--- a/Prayers/Prayers/Controls/ParaBulletView.xaml
+++ b/Prayers/Prayers/Controls/ParaBulletView.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
-    x:Class="Prayers.ParaBulletNumberItemView"
+    x:Class="Prayers.ParaBulletView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:Prayers.Controls">
@@ -8,10 +8,9 @@
         <Label
             x:Name="lblNumber"
             FontAttributes="Bold"
-            FontSize="15"
-            WidthRequest="40"
-            LineBreakMode="NoWrap" />
-        <controls:LabelExtended
-            x:Name="lblContent" />
+            LineBreakMode="NoWrap"
+            WidthRequest="40" />
+        <controls:LabelExtended x:Name="lblContentJustified" />
+        <Label x:Name="lblContentNormal" />
     </FlexLayout>
 </ContentView>
