--- a/Prayers/Prayers/Controls/ParaBulletItemView.xaml
+++ b/Prayers/Prayers/Controls/ParaBulletItemView.xaml
@@ -1,18 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
-    x:Class="Prayers.ParaContentView"
+    x:Class="Prayers.ParaBulletItemView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:Prayers.Controls">
-    <FlexLayout>
+    <FlexLayout Margin="30,2,30,0">
+        <Label
+            Margin="-10,0,5,0"
+            FontAttributes="Bold"
+            FontSize="15"
+            Text="•" />
         <controls:LabelExtended
             x:Name="lblContent"
-            Margin="30,10,30,10"
-            HorizontalOptions="StartAndExpand"
-            VerticalOptions="CenterAndExpand" />
-        <Label
-            x:Name="lblContentNormal"
-            Margin="30,2,30,0"
             HorizontalOptions="StartAndExpand"
             VerticalOptions="CenterAndExpand" />
     </FlexLayout>
