--- a/Prayers/Prayers/Controls/ParaJustifiedContentView.xaml
+++ b/Prayers/Prayers/Controls/ParaJustifiedContentView.xaml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
-    x:Class="Prayers.ParaContentView"
+    x:Class="Prayers.ParaJustifiedContentView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:Prayers.Controls">
     <FlexLayout>
+
         <controls:LabelExtended
             x:Name="lblContent"
             Margin="30,10,30,10"
