--- a/Prayers/Prayers/Controls/ParaImageView.xaml
+++ b/Prayers/Prayers/Controls/ParaImageView.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
-    x:Class="Prayers.ParaContentView"
+    x:Class="Prayers.ParaImageView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:Prayers.Controls"
@@ -11,15 +11,9 @@
         </ResourceDictionary>
     </ContentView.Resources>
     <StackLayout>
-        <controls:LabelExtended
-            x:Name="lblContent"
+        <Image
             Margin="30,10,30,10"
-            TextColor="{Binding DefaultStyle.DefaultFontColor, Converter={StaticResource stringToColorConverter}}"
-            LineHeight="1.2" />
-        <Label
-            x:Name="lblContentNormal"
-            Margin="30,10,30,0"
-            TextColor="{Binding DefaultStyle.DefaultFontColor, Converter={StaticResource stringToColorConverter}}"
-            LineHeight="1.2" />
+            Aspect="AspectFit"
+            Source="mainpic.jpg" />
     </StackLayout>
 </ContentView>
